@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 =============================
  -- BLUEGENE - Fix issues on static/overlap systems where if a midplane
     was drained you would not be able to create new blocks on it.
+ -- In sched/wiki2 (for Moab): Add excluded host list to job information
+    using new keyword "EXCLUDE_HOSTLIST".
 
 * Changes in SLURM 2.1.2
 =============================
@@ -30,7 +32,8 @@ documents those changes that are of interest to users and admins.
     of jobs to share resources.
  -- BLUEGENE - Fixed issue where tasks on steps weren't being displayed
     correctly with scontrol and sview.
- -- BLUEGENE - fixed wiki2 plugin to report correct task count for pending jobs.
+ -- BLUEGENE - fixed wiki2 plugin to report correct task count for pending 
+    jobs.
  -- BLUEGENE - Added /etc/ld.so.conf.d/slurm.conf to point to the
     directory holding libsched_if64.so when building rpms.
  -- Adjust get_wckeys call in slurmdbd to allow operators to list wckeys.
@@ -64,7 +67,8 @@ documents those changes that are of interest to users and admins.
  -- Fix issue where a 2.0 sacct could not talk correctly to a 2.1 slurmdbd.
  -- BLUEGENE - Fix issue where no partitions have any nodes assigned them to
     alert user no blocks can be created.
- -- BLUEGENE - Fix smap to put BGP images when using -Dc on a Blue Gene/P system
+ -- BLUEGENE - Fix smap to put BGP images when using -Dc on a Blue Gene/P 
+    system.
  -- Set SLURM_SUBMIT_DIR environment variable for srun and salloc commands to
     match behavior of sbatch command.
  -- Report WorkDir from "scontrol show job" command for jobs launched using
